@@ -1,3 +1,8 @@
+2007-10-22  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/centrality.R (evcent) : outdated, removed,
+	new version is generated by stimulus
+
 2007-10-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c.in (R_igraph_vectorlist_to_SEXP)
